ProveIt_Project/Code/proto_v0.19/proveit/backend/server-configs/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: ht-webserver
    app.kubernetes.io/component: ht-webserver
    app.kubernetes.io/instance: ht-webserver
  name: ht-webserver
spec:
  ports:
    - name: 5000-tcp
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: ht-webserver
  sessionAffinity: None
  type: ClusterIP
